clusters/desktop/podinfo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "podinfo.*"
  rules:
    backendRefs:
      - name: podinfo
        port: 9898
