clusters/desktop/podinfo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: ".*"
          headers:
            - name: Host
              type: RegularExpression
              value: "^podinfo\\..*$"
      backendRefs:
        - name: podinfo
          namespace: default
          port: 9898
